[package]
name = "vaultk8s"
version = "0.3.0"
description = "Library crate to use vault with k8s authentication"
authors = ["Éric BURGHARD <eric@itsufficient.me>"]
edition = "2018"

[dependencies]
async-std = { version = "1.9.0", optional = true }
isahc = { version = "1.4.0", features = ["json"] }
log = "0.4.14"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.25"
