[package]
name = "vault-jwt"
version = "0.9.1"
description = "Library crate (sync and async) to use vault with jwt authentication"
authors = ["Éric BURGHARD <eric@itsufficient.me>"]
edition = "2018"

[dependencies]
async-std = { version = "1.9.0", optional = true }
isahc = { version = "1.4.0", features = ["json"] }
log = "0.4.14"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.25"
nom = { version = "6.2.1", optional = true }

[features]
default = []
